ensure that the donate button is aligned correctly

--- a/css/donations.scss
+++ b/css/donations.scss
@@ -11,7 +11,7 @@ a {
 }
 
 #donation-hero {
-  height: 60vh;
+  min-height: 80vh;
   background-image: url('../images/hero.jpg?auto=format&fit=crop&w=1500&q=80');
   background-repeat: no-repeat;
   background-size: cover;
